src/components/Header.module.scss
.header-layout {
  margin-inline: -1rem;
  margin-top: -1rem;
  padding-inline: 1rem;
  padding-block: 0.5rem;
  position: sticky;
  top: 0;
  background-color: var(--bg-highlight);
  .title-section {
    display: inline-flex;
    column-gap: 0.5rem;
    align-items: baseline;
  }
  h1 {
    margin: 0;
    font-size: 1.5rem;
    color: var(--fg);
  }
  .links {
    margin: 0;
    display: flex;
    flex-wrap: wrap;
    column-gap: 1rem;
    padding-left: 0;
    text-wrap: nowrap;
  }
}

